# path-tracer

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: Color.cpp  Color.h  Point3.cpp  Point3.h  Ray.h  Vec3.cpp  Vec3.h  types.h
src/light/: Light.h
src/material/: Material.h
src/object/: Intersection.h  Object.h  Sphere.cpp  Sphere.h
src/renderer/: ImageBuffer.h  Renderer.h  SimpleRenderer.cpp  SimpleRenderer.h
src/scene/: Scene.cpp  Scene.h
